src/test/resources/de/feu/ps/bridges/serialization/syntax_errors/no_number_column.bgs
FIELD
11 x 8 | 2

ISLANDS
( a, 0 | 1 )
( 0, 5 | 1 )

BRIDGES
( 0, 1 | false )
